--- a/rua阮阮全集/menu.html
+++ b/rua阮阮全集/menu.html
@@ -20,6 +20,11 @@
   <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE-%E6%8E%88%E8%AF%BE%E4%B8%AD-57P-08-22">rua阮阮 授课中 57P</a></p>
   <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE-%E8%8A%B1%E6%88%BF-%E5%B0%8F%E8%A3%99%E5%AD%90-08-22">rua阮阮 花房 小裙子</a></p>
   <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE-%E8%AF%BE%E9%97%B4%E7%9A%84%E9%98%B3%E5%85%89-42P-08-22">rua阮阮 课间的阳光 42P</a></p>
+  <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE-%E5%8F%AB%E5%85%BD%E7%9A%84%E6%81%B6%E4%BD%9C%E5%89%A7-%E7%BB%88%E7%AB%A0-116P1V-304GB-08-22">rua阮阮 叫兽的恶作剧 终章 [116P1V-3.04GB]</a></p>
+  <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE-%E5%B1%85%E5%AE%B6%E5%B0%91%E5%A5%B3-40P-529MB-08-22">rua阮阮 居家少女 [40P-529MB]</a></p>
+  <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE-%E6%98%A5%E3%81%AE%E6%9B%B4%E8%A1%A3%E5%AE%A4-%E4%BD%93%E6%93%8D%E6%9C%8D-47P-469MB-08-22">rua阮阮 春の更衣室-体操服 [47P-469MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
