--- a/日奈娇全集/menu.html
+++ b/日奈娇全集/menu.html
@@ -30,6 +30,14 @@
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E5%AD%A6%E7%94%9F%E5%A6%B9%E8%87%AA%E6%8B%8D-49P11V-08-22">日奈娇 学生妹自拍 49P11V</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E8%8A%B1%E9%AD%81%E7%8B%90%E5%A6%96-144P2V-08-22">日奈娇 花魁狐妖 144P2V</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-Overlord-%E9%9B%85%E5%84%BF%E8%B4%9D%E5%BE%B7-76P-08-22">日奈娇 Overlord 雅儿贝德 76P</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E7%99%BD%E8%89%B2%E8%8A%B1%E5%AB%81-72P-08-22">日奈娇 白色花嫁 72P</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E7%89%9B%E4%BB%94%E8%A3%A4%E4%BA%BA%E5%A6%BB-131P1V-08-22">日奈娇 牛仔裤人妻 131P1V</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E6%B0%B4%E6%89%8B-70P5V-08-22">日奈娇 水手 70P5V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
