--- a/byoru全集/menu.html
+++ b/byoru全集/menu.html
@@ -30,9 +30,9 @@
   <p><a href="https://telegra.ph/Byoru-Navia-Genshin-Impact58P26V-08-22">Byoru Navia Genshin Impact58P26V</a></p>
   <p><a href="https://telegra.ph/Byoru-Dizzy-Guilty-Gear-08-22">Byoru Dizzy (Guilty Gear)</a></p>
   <p><a href="https://telegra.ph/Byoru-Yelan-Genshin-Impact-80P9V-08-22">Byoru Yelan Genshin Impact 80P9V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/Byoru-Amelia-Watson-Hololive-59P2V-08-22">Byoru Amelia Watson Hololive 59P2V</a></p>
+  <p><a href="https://telegra.ph/Byoru-Phone-Set-45P4V-08-22">Byoru Phone Set 45P4V</a></p>
+  <p><a href="https://telegra.ph/Byoru-Misa-Amane-Death-Note-61P8V-08-22">Byoru Misa Amane Death Note 61P8V</a></p>  
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
