--- a/女主K全集/menu.html
+++ b/女主K全集/menu.html
@@ -12,6 +12,9 @@
   <p><a href="https://telegra.ph/%E4%B8%80%E5%8F%AA%E5%BA%9F%E5%96%B5---fantia2401%E8%AE%A2%E9%98%85-08-22">一只废喵 - fantia2401订阅</a></p>
   <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E8%92%82%E6%B3%95-89P-08-22">女主K 蒂法 89P</a></p>
   <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E8%93%9D%E8%89%B2%E6%B3%B3%E8%A3%85%E5%A5%B3%E4%BB%86-08-22">女主K 蓝色泳装女仆</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E5%82%AC%E7%9C%A0%E5%82%B2%E5%A8%87%E7%9A%84%E5%89%8D%E8%BE%88-08-22">女主K 催眠傲娇的前辈</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E5%88%9D%E7%A7%8B%E7%A9%BF%E6%90%AD-08-22">女主K 初秋穿搭</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
