--- a/星之迟迟全集/menu.html
+++ b/星之迟迟全集/menu.html
@@ -56,8 +56,8 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-2-D-08-22-2">星之迟迟 2024-2-D</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-2-G-08-22">星之迟迟 2024-2-G</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-1-D-08-22">星之迟迟 2024-1-D 1</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-1-D-08-22-2">星之迟迟 2024-1-D 2</a></p>
   <p><a href="../index.html">返回总目录</a></p> 
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
