--- a/桃良阿宅全集/menu.html
+++ b/桃良阿宅全集/menu.html
@@ -30,6 +30,6 @@
   <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E5%9C%B0%E9%93%81-48P-08-22">桃良阿宅 地铁 48P</a></p>
   <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E6%AD%A6%E8%97%8F-44P-08-22">桃良阿宅 武藏 44P</a></p>
   <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-nikke-76P-08-22">桃良阿宅 nikke 76P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E8%9B%8B%E7%B3%95-08-22">桃良阿宅 蛋糕</a></p>
 </body>
 </html>
