--- a/沖田凛花(沖田凜花)全集/menu.html
+++ b/沖田凛花(沖田凜花)全集/menu.html
@@ -19,10 +19,10 @@
   <p><a href="http://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka-Bride-08-22">沖田凜花Rinka Bride</a></p>
   <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka-BlancWhiteRabbit-08-22">沖田凜花Rinka BlancWhiteRabbit</a></p>
   <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka-Bunny-Maid-08-22">沖田凜花Rinka Bunny Maid</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka-Racing-Swimsuit-46P-105MB-08-22">沖田凜花Rinka Racing Swimsuit [46P-105MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka---Marin-Kitagaw-JK-38P-72MB-08-22">沖田凜花Rinka - Marin Kitagaw JK [38P-72MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka---Bikini-41P-55MB-08-22">沖田凜花Rinka - Bikini [41P-55MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka---Bear-Ear-37P-70MB-08-22">沖田凜花Rinka - Bear Ear [37P-70MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
