--- a/浅安安Yuki全集/menu.html
+++ b/浅安安Yuki全集/menu.html
@@ -13,5 +13,12 @@
   <p><a href="https://telegra.ph/%E6%B5%85%E5%AE%89%E5%AE%89---%E5%8D%88%E5%90%8E-08-20">浅安安 - 午后</a></p>
   <p><a href="https://telegra.ph/%E6%B5%85%E5%AE%89%E5%AE%89Yuki---%E6%94%BE%E8%AF%BE%E5%90%8E-08-20">浅安安Yuki - 放课后</a></p>
   <p><a href="https://telegra.ph/%E6%B5%85%E5%AE%89%E5%AE%89---%E6%B9%AE%E7%81%AD-70P-681MB-08-20">浅安安 - 湮灭 [70P-681MB]</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E6%B5%85%E5%AE%89%E5%AE%89%E6%96%B0%E5%B9%B4%E8%B4%BA%E5%B2%81103P-188G-08-22">#蠢沫沫 #浅安安《新年贺岁》103P 1.88G</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
