--- a/桜井宁宁全集/menu.html
+++ b/桜井宁宁全集/menu.html
@@ -48,8 +48,8 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-2024%E5%B9%B41%E6%9C%88%E4%BC%9A%E5%91%98%E8%AE%A2%E9%98%85%E7%B3%BB%E5%88%97-29P-08-22">桜井宁宁 2024年1月会员订阅系列 29P</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-23%E5%B9%B411%E6%9C%88Partme%E4%BC%9A%E5%91%98%E8%AE%A2%E9%98%85-50P-08-22">桜井宁宁 23年11月Partme会员订阅 50P</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-Partme-2303%E6%9C%88%E4%BC%9A%E5%91%98%E8%AE%A2%E9%98%85-85P2V-08-22">桜井宁宁 Partme 23.03月会员订阅 85P2V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E7%94%B5%E7%8E%A9%E6%98%A5%E4%B8%BD-08-22">桜井宁宁 电玩春丽</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E9%BB%91%E7%BA%B1%E6%97%97%E8%A2%8D-08-22">桜井宁宁 黑纱旗袍</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
