--- a/Sayo Momo(SayoMomo)全集/menu.html
+++ b/Sayo Momo(SayoMomo)全集/menu.html
@@ -17,8 +17,8 @@
   <p><a href="https://telegra.ph/SayoMomo-Gamer-Girl-08-22">SayoMomo Gamer Girl</a></p>
   <p><a href="https://telegra.ph/Sayo-Momo-Azur-Lane-KMS-Hindenburg-08-22">Sayo Momo Azur Lane KMS Hindenburg</a></p>
   <p><a href="https://telegra.ph/Sayo-Momo-Frieren-x-Fern-94P17V-08-22">Sayo Momo Frieren x Fern 94P17V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/SayoMomo-Furina-%E3%83%95%E3%83%AA%E3%83%BC%E3%83%8A-Genshin-Impact-08-22">#SayoMomo Furina フリーナ Genshin Impact</a></p>
+  <p><a href="https://telegra.ph/Sayo-Momo-Esdeath-sama-%E3%82%A8%E3%82%B9%E3%83%87%E3%82%B9-AKAME-GA-KILL-08-22">Sayo Momo Esdeath sama エスデス AKAME GA KILL</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
