--- a/年年全集/menu.html
+++ b/年年全集/menu.html
@@ -23,8 +23,8 @@
   <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4---%E5%AD%A6%E5%A7%90%E7%9A%84%E7%A7%98%E5%AF%86-32P-363M-08-20">年年 - 学姐的秘密 [32P-363M]</a></p>
   <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4---%E9%A3%9E%E5%A4%A9-63p-08-20">年年 - 飞天 63p(汉服)</a></p>
   <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4-%E6%BD%9C%E8%93%9D-56P-08-22">年年 潜蓝 56P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4-%E6%9E%97%E9%97%B4%E5%B0%8F%E5%B1%8B-52P-08-22">年年 林间小屋 52P</a></p>
+  <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4-%E7%A9%BA%E5%A7%90-83P-08-22">年年 空姐 83P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
