--- a/花铃全集/menu.html
+++ b/花铃全集/menu.html
@@ -24,7 +24,7 @@
   <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E8%8A%99%E6%B4%9B%E4%BC%A6-%E8%8D%AF%E5%BF%83%E5%B7%A7%E5%85%8B%E5%8A%9B-84P-08-22">花铃 芙洛伦 药心巧克力 84P</a></p>
   <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-G36%E7%8E%89%E7%93%AF%E7%AB%8B%E6%97%97%E8%A2%8D-88P-08-22">花铃 G36玉瓯立旗袍 88P</a></p>
   <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E5%B0%8F%E7%BE%8A%E5%A4%8F%E5%8D%89-08-22">花铃 小羊夏卉</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E5%90%8A%E5%B8%A6%E8%A2%9C%E4%BF%AE%E5%A5%B3-71P-08-22">花铃 吊带袜修女 71P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
