--- a/LLS_莉莉丝全集/menu.html
+++ b/LLS_莉莉丝全集/menu.html
@@ -9,8 +9,8 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E7%AD%B1%E7%94%B0%E7%94%9C-%E5%B0%8F%E5%A5%B3%E4%BB%86-08-22">筱田甜 小女仆</a></p>
-  <p><a href="https://telegra.ph/%E7%AD%B1%E7%94%B0%E7%94%9C-%E9%9B%AA%E5%A5%B3%E6%9C%AA%E4%BA%A1%E4%BA%BA-2-62P2V-08-22">筱田甜 雪女未亡人 2 62P2V</a></p>
+  <p><a href="https://telegra.ph/LLS-%E8%8E%89%E8%8E%89%E4%B8%9D-%E5%A4%9C%E5%85%B0-40P-03-21">LLS_莉莉丝 夜兰 40P</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
