--- a/Natsuko夏夏子全集/menu.html
+++ b/Natsuko夏夏子全集/menu.html
@@ -40,8 +40,8 @@
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-22%E5%9C%A3%E8%AF%9E-30P1V-08-22">Natsuko夏夏子 22圣诞 30P1V</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E9%80%B8%E4%BB%99-%E8%86%8F%E5%8F%91%E5%87%9D%E8%84%82-61P1V-08-22">Natsuko夏夏子 逸仙 膏发凝脂 61P1V</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E5%A4%8F%E8%AE%B0%E9%92%B1%E5%BA%84-48P1V-08-22">Natsuko夏夏子 夏记钱庄 48P1V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E9%BE%99%E5%B9%B4%E6%96%B0%E6%98%A5-45P-08-22">Natsuko夏夏子 龙年新春 45P</a></p>
+  <p><a href="https://telegra.ph/%E5%A4%8F%E5%A4%8F%E5%AD%90-%E7%A7%81%E6%88%BF34Natsuko%E5%9C%A3%E8%AF%9E%E9%9B%AA%E7%B2%BE%E7%81%B5-08-22">夏夏子 私房34【Natsuko】圣诞雪精灵</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
