--- a/Sayo Momo(SayoMomo)全集/menu.html
+++ b/Sayo Momo(SayoMomo)全集/menu.html
@@ -19,6 +19,18 @@
   <p><a href="https://telegra.ph/Sayo-Momo-Frieren-x-Fern-94P17V-08-22">Sayo Momo Frieren x Fern 94P17V</a></p>
   <p><a href="https://telegra.ph/SayoMomo-Furina-%E3%83%95%E3%83%AA%E3%83%BC%E3%83%8A-Genshin-Impact-08-22">#SayoMomo Furina フリーナ Genshin Impact</a></p>
   <p><a href="https://telegra.ph/Sayo-Momo-Esdeath-sama-%E3%82%A8%E3%82%B9%E3%83%87%E3%82%B9-AKAME-GA-KILL-08-22">Sayo Momo Esdeath sama エスデス AKAME GA KILL</a></p>
+  <p><a href="https://telegra.ph/SayoMomo-Azur-Lane-Aegir-71P5V-896MB-08-22">SayoMomo Azur Lane Aegir [71P5V-896MB]</a></p>
+  <p><a href="https://telegra.ph/Sayo-Momo-HSR-Topaz-%E3%83%88%E3%83%91%E3%83%BC%E3%82%BA-08-22">Sayo Momo HSR Topaz トパーズ</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
