--- a/kaya萱全集/menu.html
+++ b/kaya萱全集/menu.html
@@ -9,9 +9,7 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E7%AD%B1%E7%94%B0%E7%94%9C-%E5%B0%8F%E5%A5%B3%E4%BB%86-08-22">筱田甜 小女仆</a></p>
-  <p><a href="https://telegra.ph/%E7%AD%B1%E7%94%B0%E7%94%9C-%E9%9B%AA%E5%A5%B3%E6%9C%AA%E4%BA%A1%E4%BA%BA-2-62P2V-08-22">筱田甜 雪女未亡人 2 62P2V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/kaya%E8%90%B1-Asuma-Toki-Bunny-Girl-Blue-Archive-08-22">kaya萱 Asuma Toki Bunny Girl Blue Archive</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
