--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -36,12 +36,12 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%89%BE%E7%B1%B3%E8%8E%89%E4%BA%9A-08-22">九言 艾米莉亚</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E9%98%AE%E6%A2%85-08-22">九言 阮梅</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%B1%B9%E7%BA%B9%E5%86%85%E8%A1%A3-34P4V-08-22">九言 豹纹内衣 34P4V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E7%94%B3%E9%B9%A4%E6%97%97%E8%A2%8D%E5%8D%95%E4%BA%BA%E5%8E%9F%E7%A5%9E-08-22">九言 申鹤旗袍单人（原神）</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E7%BA%B3%E6%A0%BC%E9%99%B5-08-22">九言 纳格陵</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%8E%AB%E5%A8%9C-39P4V-08-22">九言 莫娜 39P4V</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%B0%8F%E7%91%B6%E5%B9%BA%E5%B9%BA-%E7%94%98%E9%9B%A8%E7%94%B3%E9%B9%A4%E6%B5%B7%E7%81%AF%E8%8A%82%E5%8F%8C%E4%BA%BA%E8%87%AA%E6%8B%8D%E5%8E%9F%E7%A5%9E-08-22">九言 小瑶幺幺 甘雨申鹤海灯节双人自拍（原神</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%9C%A3%E8%AF%9E%E7%A4%BC%E7%89%A9-08-22">九言 圣诞礼物</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%9B%87%E5%96%B0%E6%A2%A6%E5%AD%90-36P5V-08-22">九言 蛇喰梦子 36P5V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
