--- a/二阶堂 (宅绘子) 全集/menu.html
+++ b/二阶堂 (宅绘子) 全集/menu.html
@@ -9,10 +9,7 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E7%AD%B1%E7%94%B0%E7%94%9C-%E5%B0%8F%E5%A5%B3%E4%BB%86-08-22">筱田甜 小女仆</a></p>
-  <p><a href="https://telegra.ph/%E7%AD%B1%E7%94%B0%E7%94%9C-%E9%9B%AA%E5%A5%B3%E6%9C%AA%E4%BA%A1%E4%BA%BA-2-62P2V-08-22">筱田甜 雪女未亡人 2 62P2V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%BA%8C%E9%98%B6%E5%A0%82-%E5%AE%85%E7%BB%98%E5%AD%90-%E5%B0%8F%E7%86%8A-74P1V-08-22">二阶堂 (宅绘子) 小熊 74P1V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
