--- a/女主K全集/menu.html
+++ b/女主K全集/menu.html
@@ -17,8 +17,8 @@
   <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E5%B7%A5%E5%8F%A3%E5%A4%A9%E4%BD%BF-08-22">女主K 工口天使</a></p>
   <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E6%80%A7%E6%84%9F%E4%B8%80%E5%A4%8F-08-22">女主K 性感一夏</a></p>
   <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E5%9C%A3%E8%AF%9E%E9%BA%8B%E9%B9%BF-100P1V-08-22">女主K 圣诞麋鹿 100P1V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E9%AD%94%E5%A5%B3%E3%81%AE%E6%97%A5%E5%B8%B8-92P1V-08-22">女主K 魔女の日常 92P1V</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E4%BF%AE%E5%A5%B32-100P1V-08-22">女主K 修女2 100P1V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
