--- a/星澜是澜澜叫澜妹呀全集/menu.html
+++ b/星澜是澜澜叫澜妹呀全集/menu.html
@@ -23,7 +23,7 @@
   <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA-%E5%A5%B6%E6%A1%83%E6%A1%83%E6%98%9F%E6%BE%9C-%E6%9A%97%E6%B6%8C-70P1V126G%E4%BA%91%E6%BA%AA-%E5%A5%B6%E6%A1%83%E6%A1%83%E6%98%9F%E6%BE%9C-%E6%9A%97%E6%B6%8C-70P1V126G-08-19">云溪 奶桃桃×星澜-暗涌 [70P1V+1.26G]云溪 奶桃桃×星澜-暗涌 [70P1V+1.26G]</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90%E6%98%9F%E6%BE%9C---%E7%91%B6%E6%B1%A0%E6%B4%97%E5%87%9D%E8%84%82-111P2V-118G-08-20">Natsuko夏夏子&星澜 - 瑶池洗凝脂 [111P2V-1.18G]</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E6%BE%9C%E6%98%AF%E6%BE%9C%E6%BE%9C%E5%8F%AB%E6%BE%9C%E5%A6%B9%E5%91%80-%E5%BC%A9S-41P1V-08-21">星澜是澜澜叫澜妹呀 弩S 41P1V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E6%BE%9C%E6%98%AF%E6%BE%9C%E6%BE%9C%E5%8F%AB%E6%BE%9C%E5%A6%B9%E5%91%80%E4%BA%91%E6%BA%AA%E6%BA%AA-%E5%A6%82%E5%8B%BE-55P1V-08-22">星澜是澜澜叫澜妹呀&云溪溪 如勾 55P1V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
