--- a/桜井宁宁全集/menu.html
+++ b/桜井宁宁全集/menu.html
@@ -51,7 +51,7 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E7%94%B5%E7%8E%A9%E6%98%A5%E4%B8%BD-08-22">桜井宁宁 电玩春丽</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E9%BB%91%E7%BA%B1%E6%97%97%E8%A2%8D-08-22">桜井宁宁 黑纱旗袍</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E9%BE%99%E5%B9%B4%E6%96%B0%E5%B9%B4%E7%AF%87-70P-697MB-08-22">桜井宁宁 龙年新年篇 [70P-697MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E5%BF%8D%E8%80%85-74P-08-22">桜井宁宁 忍者 74P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
