--- a/落落Raku全集/menu.html
+++ b/落落Raku全集/menu.html
@@ -11,8 +11,8 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E8%90%BD%E8%90%BDRaku---LoveStart-08-19">落落Raku - Love!☆Start!!</a></p>
   <p><a href="https://telegra.ph/%E8%90%BD%E8%90%BDRaku-Lily-White-08-22">落落Raku Lily White</a></p>
-<p><a href="../index.html">返回总目录</a></p>
-<p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%90%BD%E8%90%BDRaku-SUCCUBUS-BAR-08-22">落落Raku SUCCUBUS BAR♡</a></p>
+  <p><a href="https://telegra.ph/%E8%90%BD%E8%90%BDRaku-%E5%83%95%E3%82%89%E3%81%AELIVE-%E5%90%9B%E3%81%A8%E3%81%AELIFE-08-22">落落Raku 僕らのLIVE 君とのLIFE</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 <p><a href="../index.html">返回总目录</a></p>
