--- a/rioko凉凉子全集/menu.html
+++ b/rioko凉凉子全集/menu.html
@@ -22,8 +22,8 @@
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E9%87%91%E9%B9%BF%E5%8F%B7-08-22">凉凉子 金鹿号</a></p>
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E4%BC%98%E8%8F%88%E6%B5%AA%E8%8A%B1%E9%AA%91%E5%A3%AB-08-22">凉凉子 优菈浪花骑士</a></p>
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E9%98%BF%E5%B0%94%E6%AF%94%E6%81%A9%E6%97%97%E8%A2%8D-08-22">凉凉子 阿尔比恩旗袍</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E7%94%B3%E9%B9%A4%E5%90%8C%E4%BA%BA%E6%97%97%E8%A2%8D%E5%8E%9F%E7%A5%9E-08-22">凉凉子 申鹤同人旗袍（原神）</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E9%BE%99%E5%B9%B4%E9%BE%99%E5%9B%BE-08-22">凉凉子 龙年龙图</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
