--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -65,6 +65,15 @@
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-%E4%B8%9C%E6%96%B9Project%E5%8D%81%E5%85%AD%E5%A4%9C%E5%92%B2%E5%A4%9C90P-08-22">玉汇 东方Project十六夜咲夜90P</a></p>
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87-%E9%9B%AA%E5%85%94-102P-08-22">yuuhui玉汇 雪兔 102P</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-%E9%BB%91%E7%8C%AB%E5%A5%B3%E4%BB%86-08-22">玉汇 黑猫女仆</a></p>
+  <p><a href="https://telegra.ph/Yuuhui%E7%8E%89%E6%B1%87-%E9%9D%A1%E7%83%9F-%E9%BB%91%E7%BA%B1%E6%97%97%E8%A2%8D-116P-3V-08-22">Yuuhui玉汇 靡烟 黑纱旗袍 116P 3V</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87-%E6%BD%9C%E8%A7%84%E5%88%99-137P-228-GB-08-22">yuuhui玉汇 潜规则 137P 2.28 GB</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-%E4%B8%80%E6%9C%88-Set-C---Xmas-Gift-08-22">玉汇 一月 Set C - Xmas Gift</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
