--- a/星之迟迟全集/menu.html
+++ b/星之迟迟全集/menu.html
@@ -43,8 +43,6 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-5-C-08-21">星之迟迟 2024-5-C</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-5-D-08-21">星之迟迟 2024-5-D</a></p>  
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-5-D-2-08-21">星之迟迟 2024-5-D 2</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-4-C-08-22">星之迟迟 2024-4-C</a></p>   
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-4-D-1-08-22">星之迟迟 2024-4-D-1</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-4-D-2-08-22">星之迟迟 2024-4-D-2</a></p>
@@ -54,19 +52,28 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-2-C-08-22">星之迟迟 2024-2-C</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-2-D-08-22">星之迟迟 2024-2-D</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-2-D-08-22-2">星之迟迟 2024-2-D</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-2-G-08-22">星之迟迟 2024-2-G</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-1-A-08-22">星之迟迟 2024-1-A</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-1-B-08-22">星之迟迟 2024-1-B</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-1-C2%E6%9C%8820%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-22">星之迟迟 2024-1-C</a></p>   
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-1-D-08-22">星之迟迟 2024-1-D 1</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-1-D-08-22-2">星之迟迟 2024-1-D 2</a></p>
-  <p><a href="../index.html">返回总目录</a></p> 
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p> 
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p> 
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-1-G-08-22">星之迟迟 2024-1-G</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-23%E5%B9%B412%E6%9C%88%E8%AE%A1%E5%88%92C%E6%98%8E%E6%97%A5%E5%A5%88%E5%A5%B3%E4%BB%8691P-08-22">星之迟迟 23年12月计划C明日奈女仆91P</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-12-D-08-22">星之迟迟 2023-12-D 1</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-12-D-08-22-2">星之迟迟 2023-12-D 2</a></p> 
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-%E4%B8%87%E5%9C%A3%E8%8A%82%E7%89%B9%E5%88%AB%E4%BC%81%E5%88%92-%E9%9B%85%E5%8A%AA%E6%96%AF-Janus-%E3%82%B8%E3%82%A7%E3%83%BC%E3%83%8A%E3%82%B9-86P-08-22">星之迟迟 万圣节特别企划 雅努斯 Janus ジェーナス 86P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>   
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
