--- a/花铃全集/menu.html
+++ b/花铃全集/menu.html
@@ -25,8 +25,8 @@
   <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-G36%E7%8E%89%E7%93%AF%E7%AB%8B%E6%97%97%E8%A2%8D-88P-08-22">花铃 G36玉瓯立旗袍 88P</a></p>
   <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E5%B0%8F%E7%BE%8A%E5%A4%8F%E5%8D%89-08-22">花铃 小羊夏卉</a></p>
   <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E5%90%8A%E5%B8%A6%E8%A2%9C%E4%BF%AE%E5%A5%B3-71P-08-22">花铃 吊带袜修女 71P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E6%97%B6%E5%B4%8E%E7%8B%82%E4%B8%89%E6%97%97%E8%A2%8D-66P-08-22">花铃 时崎狂三旗袍 66P</a></p>
+  <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E9%9B%85%E5%8A%AA%E6%96%AF-%E5%96%B5%E5%96%B5%E6%83%8A%E6%82%9A%E5%A4%9C-44P-08-22">花铃 雅努斯 喵喵惊悚夜 44P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
