--- a/草莓羽衣全集/menu.html
+++ b/草莓羽衣全集/menu.html
@@ -9,8 +9,7 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E7%AD%B1%E7%94%B0%E7%94%9C-%E5%B0%8F%E5%A5%B3%E4%BB%86-08-22">筱田甜 小女仆</a></p>
-  <p><a href="https://telegra.ph/%E7%AD%B1%E7%94%B0%E7%94%9C-%E9%9B%AA%E5%A5%B3%E6%9C%AA%E4%BA%A1%E4%BA%BA-2-62P2V-08-22">筱田甜 雪女未亡人 2 62P2V</a></p>
+  <p><a href="https://telegra.ph/%E8%8D%89%E8%8E%93%E7%BE%BD%E8%A1%A3-2402-fantia-08-22">草莓羽衣 2402 fantia</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
